--- a/dashboard (panel de control)/plugins/data-tables/images/sort_asc_disabled.html
+++ b/dashboard (panel de control)/plugins/data-tables/images/sort_asc_disabled.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from adminex.themebucket.net/js/data-tables/images/sort_asc_disabled.png by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Jul 2014 12:38:36 GMT -->
+<!-- Mirrored from adminex.themebucket.net/../file/js/data-tables/images/sort_asc_disabled.png by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Jul 2014 12:38:36 GMT -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -13,26 +13,26 @@
   <title>AdminX</title>
 
   <!--icheck-->
-  <link href="js/iCheck/skins/minimal/minimal.html" rel="stylesheet">
-  <link href="js/iCheck/skins/square/square.html" rel="stylesheet">
-  <link href="js/iCheck/skins/square/red.html" rel="stylesheet">
-  <link href="js/iCheck/skins/square/blue.html" rel="stylesheet">
+  <link href="../file/js/iCheck/skins/minimal/minimal.html" rel="stylesheet">
+  <link href="../file/js/iCheck/skins/square/square.html" rel="stylesheet">
+  <link href="../file/js/iCheck/skins/square/red.html" rel="stylesheet">
+  <link href="../file/js/iCheck/skins/square/blue.html" rel="stylesheet">
 
   <!--dashboard calendar-->
-  <link href="css/clndr.html" rel="stylesheet">
+  <link href="../file/css/clndr.html" rel="stylesheet">
 
 
   <!--common-->
-  <link href="css/style.html" rel="stylesheet">
-  <link href="css/style-responsive.html" rel="stylesheet">
+  <link href="../file/css/style.html" rel="stylesheet">
+  <link href="../file/css/style-responsive.html" rel="stylesheet">
 
 
 
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <script src="js/respond.min.js"></script>
+  <script src="../file/js/html5shiv.js"></script>
+  <script src="../file/js/respond.min.js"></script>
   <![endif]-->
 </head>
 
@@ -193,7 +193,7 @@
             <!--toggle button end-->
 
             <!--search start-->
-            <form class="searchform" action="http://adminex.themebucket.net/js/data-tables/images/index.html" method="post">
+            <form class="searchform" action="http://adminex.themebucket.net/../file/js/data-tables/images/index.html" method="post">
                 <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
             </form>
             <!--search end-->
@@ -899,40 +899,40 @@
 </section>
 
 <!-- Placed js at the end of the document so the pages load faster -->
-<script src="js/jquery-1.10.2.min.html"></script>
-<script src="js/jquery-ui-1.9.2.custom.min.html"></script>
-<script src="js/jquery-migrate-1.2.1.min.html"></script>
-<script src="js/bootstrap.min.html"></script>
-<script src="js/modernizr.min.html"></script>
-<script src="js/jquery.nicescroll.html"></script>
+<script src="../file/js/jquery-1.10.2.min.html"></script>
+<script src="../file/js/jquery-ui-1.9.2.custom.min.html"></script>
+<script src="../file/js/jquery-migrate-1.2.1.min.html"></script>
+<script src="../file/js/bootstrap.min.html"></script>
+<script src="../file/js/modernizr.min.html"></script>
+<script src="../file/js/jquery.nicescroll.html"></script>
 
 <!--easy pie chart-->
-<script src="js/easypiechart/jquery.easypiechart.html"></script>
-<script src="js/easypiechart/easypiechart-init.html"></script>
+<script src="../file/js/easypiechart/jquery.easypiechart.html"></script>
+<script src="../file/js/easypiechart/easypiechart-init.html"></script>
 
 <!--Sparkline Chart-->
-<script src="js/sparkline/jquery.sparkline.html"></script>
-<script src="js/sparkline/sparkline-init.html"></script>
+<script src="../file/js/sparkline/jquery.sparkline.html"></script>
+<script src="../file/js/sparkline/sparkline-init.html"></script>
 
 <!--icheck -->
-<script src="js/iCheck/jquery.icheck.html"></script>
-<script src="js/icheck-init.html"></script>
+<script src="../file/js/iCheck/jquery.icheck.html"></script>
+<script src="../file/js/icheck-init.html"></script>
 
 <!-- jQuery Flot Chart-->
-<script src="js/flot-chart/jquery.flot.html"></script>
-<script src="js/flot-chart/jquery.flot.tooltip.html"></script>
-<script src="js/flot-chart/jquery.flot.resize.html"></script>
-<script src="js/flot-chart/jquery.flot.pie.resize.html"></script>
-<script src="js/flot-chart/jquery.flot.selection.html"></script>
-<script src="js/flot-chart/jquery.flot.stack.html"></script>
-<script src="js/flot-chart/jquery.flot.time.html"></script>
-<script src="js/main-chart.html"></script>
+<script src="../file/js/flot-chart/jquery.flot.html"></script>
+<script src="../file/js/flot-chart/jquery.flot.tooltip.html"></script>
+<script src="../file/js/flot-chart/jquery.flot.resize.html"></script>
+<script src="../file/js/flot-chart/jquery.flot.pie.resize.html"></script>
+<script src="../file/js/flot-chart/jquery.flot.selection.html"></script>
+<script src="../file/js/flot-chart/jquery.flot.stack.html"></script>
+<script src="../file/js/flot-chart/jquery.flot.time.html"></script>
+<script src="../file/js/main-chart.html"></script>
 
 <!--common scripts for all pages-->
-<script src="js/scripts.html"></script>
+<script src="../file/js/scripts.html"></script>
 
 
 </body>
 
-<!-- Mirrored from adminex.themebucket.net/js/data-tables/images/sort_asc_disabled.png by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Jul 2014 12:39:04 GMT -->
+<!-- Mirrored from adminex.themebucket.net/../file/js/data-tables/images/sort_asc_disabled.png by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Jul 2014 12:39:04 GMT -->
 </html>
