--- a/dashboard (panel de control)/plugins/metismenu/test/animate.html
+++ b/dashboard (panel de control)/plugins/metismenu/test/animate.html
@@ -7,16 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>metisMenu & animate.css</title>
 
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/../file/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/../file/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="metisMenu.min.css">
   <link rel="stylesheet" href="demo.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css" charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.../file/css/3.5.1/animate.min.css" charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.4.1/themes/prism.min.css">
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.../file/js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -272,7 +272,7 @@
     <section class="content">
       <div class="col-xs-12">
         <h3>Support Animate
-          <small>with <a href="http://daneden.github.io/animate.css/">animate.css</a></small>
+          <small>with <a href="http://daneden.github.io/animate.../file/css/">animate.css</a></small>
         </h3>
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -291,7 +291,7 @@
   </div>
 
   <script src="jquery/dist/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/../file/js/bootstrap.min.js"></script>
   <script src="metisMenu.js"></script>
 
   <script>
