--- a/dashboard (panel de control)/plugins/nanoscrollerjs/bin/dev.html
+++ b/dashboard (panel de control)/plugins/nanoscrollerjs/bin/dev.html
@@ -6,7 +6,7 @@
   <meta property="og:image" content="http://jamesflorentino.com/jquery.nanoscroller/fb.png"/>
   <meta property="og:description" content="nanoScroller.js is a jQuery plugin that offers a simple way of implementing non-distracting scrollbars for your website. It also respects html markup and uses only two layers for scrolling content. It is aimed at providing scrollbar solutions for dynamic content such as from ajax's.
                  "/>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="../file/css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <a href="https://github.com/jamesflorentino/nanoScrollerJS"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
+  <a href="https://github.com/jamesflorentino/nanoScrollerJS"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/../assets/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
 
 <!-- stub/filler data -->
 <script type="text/template" id="stub">
@@ -47,7 +47,7 @@
 .nano .nano-pane .nano-slider { background: #111; }
 </pre>
 <ul>
-  <li><a href="css/nanoscroller.css">nanoscroller.css</a>
+  <li><a href="../file/css/nanoscroller.css">nanoscroller.css</a>
 </ul>
 <h2>3. JavaScript</h2>
 <pre>
