--- a/dashboard (panel de control)/plugins/noty-master/demo/allTypes.html
+++ b/dashboard (panel de control)/plugins/noty-master/demo/allTypes.html
@@ -37,7 +37,7 @@
 <script src="jquery-1.8.0.js"></script>
 
 <!-- noty -->
-<script type="text/javascript" src="../js/noty/packaged/jquery.noty.packaged.js"></script>
+<script type="text/javascript" src="../../file/js/noty/packaged/jquery.noty.packaged.js"></script>
 
 <script type="text/javascript">
 
