--- a/dashboard (panel de control)/plugins/noty-master/demo/themeBootstrap.html
+++ b/dashboard (panel de control)/plugins/noty-master/demo/themeBootstrap.html
@@ -23,7 +23,7 @@
     </style>
 
     <link rel="stylesheet" type="text/css" href="buttons.css"/>
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/../file/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -36,7 +36,7 @@
 <script src="jquery-1.7.2.min.js"></script>
 
 <!-- noty -->
-<script type="text/javascript" src="../js/noty/packaged/jquery.noty.packaged.min.js"></script>
+<script type="text/javascript" src="../../file/js/noty/packaged/jquery.noty.packaged.min.js"></script>
 
 <script type="text/javascript">
 
