--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/bars.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/bars.html
@@ -1,6 +1,6 @@
 <!doctype>
 <head>
-	<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
 
 	<script src="../vendor/d3.v3.js"></script>
 
