--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/hover.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/hover.html
@@ -1,8 +1,8 @@
 <!doctype>
 <head>
-	<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/detail.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/legend.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/detail.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/legend.css">
 
 	<script src="../vendor/d3.v3.js"></script>
 
