--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/logscale.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/logscale.html
@@ -1,8 +1,8 @@
 <!doctype html>
 
-<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-<link type="text/css" rel="stylesheet" href="css/lines.css">
-<link type="text/css" rel="stylesheet" href="../src/css/detail.css">
+<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+<link type="text/css" rel="stylesheet" href="../file/css/lines.css">
+<link type="text/css" rel="stylesheet" href="../src/../file/css/detail.css">
 
 <script src="../vendor/d3.v3.js"></script>
 <script src="../rickshaw.js"></script>
