--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/multi.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/multi.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 <link type="text/css" rel="stylesheet" href="../rickshaw.css">
-<link type="text/css" rel="stylesheet" href="css/lines.css">
+<link type="text/css" rel="stylesheet" href="../file/css/lines.css">
 <link type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css">
 <script src="../vendor/d3.v3.js"></script>
 
