--- a/dashboard (panel de control)/calendar.html
+++ b/dashboard (panel de control)/calendar.html
@@ -4,18 +4,18 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calendar | Obama - Responsive admin template.</title>
-        <link rel="shortcut icon" href="img/favicon.ico">
+        <link rel="shortcut icon" href="../assets/img/favicon.ico">
         <!--STYLESHEET-->
         <!--=================================================-->
         <!--Open Sans Font [ OPTIONAL ] -->
         <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Roboto:500,400italic,100,700italic,300,700,500italic,400" rel="stylesheet">
         <!--Bootstrap Stylesheet [ REQUIRED ]-->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="../file/css/bootstrap.min.css" rel="stylesheet">
         <!--Jasmine Stylesheet [ REQUIRED ]-->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="../file/css/style.css" rel="stylesheet">
         <!--Font Awesome [ OPTIONAL ]-->
-        <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="plugins/font-awesome/../file/css/font-awesome.min.css" rel="stylesheet">
         <!--Switchery [ OPTIONAL ]-->
         <link href="plugins/switchery/switchery.min.css" rel="stylesheet">
         <!--Bootstrap Select [ OPTIONAL ]-->
@@ -23,13 +23,13 @@
         <!--Full Calendar [ OPTIONAL ]-->
         <link href="plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
         <!--Demo [ DEMONSTRATION ]-->
-        <link href="css/demo/jasmine.css" rel="stylesheet">
+        <link href="../file/css/demo/jasmine.css" rel="stylesheet">
         <!--SCRIPT-->
         <!--=================================================-->
         <!--Page Load Progress Bar [ OPTIONAL ]-->
         <link href="plugins/pace/pace.min.css" rel="stylesheet">
         <script src="plugins/pace/pace.min.js"></script>
-        <script src="js/modernizr.custom.js"></script>
+        <script src="../file/js/modernizr.custom.js"></script>
     </head>
     <body>
         <div id="container" class="effect mainnav-sm navbar-fixed mainnav-fixed">
@@ -62,7 +62,7 @@
                                                 <!-- Dropdown list-->
                                                 <li>
                                                     <a href="#" class="media">
-                                                        <div class="media-left"> <img src="img/av2.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                        <div class="media-left"> <img src="../assets/img/av2.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                         <div class="media-body">
                                                             <div class="text-nowrap">Andy sent you a message</div>
                                                             <small class="text-muted">15 minutes ago</small> 
@@ -72,7 +72,7 @@
                                                 <!-- Dropdown list-->
                                                 <li>
                                                     <a href="#" class="media">
-                                                        <div class="media-left"> <img src="img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                        <div class="media-left"> <img src="../assets/img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                         <div class="media-body">
                                                             <div class="text-nowrap">Lucy sent you a message</div>
                                                             <small class="text-muted">30 minutes ago</small> 
@@ -82,7 +82,7 @@
                                                 <!-- Dropdown list-->
                                                 <li>
                                                     <a href="#" class="media">
-                                                        <div class="media-left"> <img src="img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                        <div class="media-left"> <img src="../assets/img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                         <div class="media-body">
                                                             <div class="text-nowrap">Jackson sent you a message</div>
                                                             <small class="text-muted">40 minutes ago</small> 
@@ -92,7 +92,7 @@
                                                 <!-- Dropdown list-->
                                                 <li>
                                                     <a href="#" class="media">
-                                                        <div class="media-left"> <img src="img/av6.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                        <div class="media-left"> <img src="../assets/img/av6.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                         <div class="media-body">
                                                             <div class="text-nowrap">Donna sent you a message</div>
                                                             <small class="text-muted">5 Horas ago</small> 
@@ -102,7 +102,7 @@
                                                 <!-- Dropdown list-->
                                                 <li>
                                                     <a href="#" class="media">
-                                                        <div class="media-left"> <img src="img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                        <div class="media-left"> <img src="../assets/img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                         <div class="media-body">
                                                             <div class="text-nowrap">Lucy sent you a message</div>
                                                             <small class="text-muted">Yesterday</small> 
@@ -112,7 +112,7 @@
                                                 <!-- Dropdown list-->
                                                 <li>
                                                     <a href="#" class="media">
-                                                        <div class="media-left"> <img src="img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                        <div class="media-left"> <img src="../assets/img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                         <div class="media-body">
                                                             <div class="text-nowrap">Jackson sent you a message</div>
                                                             <small class="text-muted">Yesterday</small> 
@@ -212,7 +212,7 @@
                             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
                             <li id="dropdown-user" class="dropdown">
                                 <a href="#" data-toggle="dropdown" class="dropdown-toggle text-right">
-                                    <span class="pull-right"> <img class="img-circle img-user media-object" src="img/av1.png" alt="Profile Picture"> </span>
+                                    <span class="pull-right"> <img class="img-circle img-user media-object" src="../assets/img/av1.png" alt="Profile Picture"> </span>
                                     <div class="username hidden-xs">John Doe</div>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right with-arrow">
@@ -537,15 +537,15 @@
         <!--JAVASCRIPT--> 
         <!--=================================================--> 
         <!--jQuery [ REQUIRED ]--> 
-        <script src="js/jquery-2.1.1.min.js"></script> 
+        <script src="../file/js/jquery-2.1.1.min.js"></script> 
         <!--BootstrapJS [ RECOMMENDED ]--> 
-        <script src="js/bootstrap.min.js"></script> 
+        <script src="../file/js/bootstrap.min.js"></script> 
         <!--Fast Click [ OPTIONAL ]--> 
         <script src="plugins/fast-click/fastclick.min.js"></script> 
         <!--Jasmine Admin [ REQUIRED ]--> 
-        <script src="js/scripts.js"></script> 
+        <script src="../file/js/scripts.js"></script> 
         <!--Jquery Nano Scroller js [ REQUIRED ]-->
-        <script src="plugins/nanoscrollerjs/jquery.nanoscroller.min.js"></script>
+        <script src="plugins/nanoscroller../file/js/jquery.nanoscroller.min.js"></script>
         <!--Metismenu js [ REQUIRED ]-->
         <script src="plugins/metismenu/metismenu.min.js"></script>
         <!--Switchery [ OPTIONAL ]--> 
@@ -557,7 +557,7 @@
         <script src="plugins/fullcalendar/lib/jquery-ui.custom.min.js"></script> 
         <script src="plugins/fullcalendar/fullcalendar.min.js"></script> 
         <!--Full Calendar [ SAMPLE ]--> 
-        <script src="js/demo/fullcalendar.js"></script> 
+        <script src="../file/js/demo/fullcalendar.js"></script> 
         <!--Fullscreen jQuery [ OPTIONAL ]--> 
         <script src="plugins/screenfull/screenfull.js"></script> 
     </body>
