--- a/dashboard (panel de control)/pages-directory.html
+++ b/dashboard (panel de control)/pages-directory.html
@@ -5,24 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> User Directory | Obama - Responsive admin template.</title>
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.ico">
     <!--STYLESHEET-->
     <!--=================================================-->
     <!--Roboto Slab Font [ OPTIONAL ] -->
     <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:500,400italic,100,700italic,300,700,500italic,400" rel="stylesheet">
     <!--Bootstrap Stylesheet [ REQUIRED ]-->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../file/css/bootstrap.min.css" rel="stylesheet">
     <!--Jasmine Stylesheet [ REQUIRED ]-->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../file/css/style.css" rel="stylesheet">
     <!--Font Awesome [ OPTIONAL ]-->
-    <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="plugins/font-awesome/../file/css/font-awesome.min.css" rel="stylesheet">
     <!--Switchery [ OPTIONAL ]-->
     <link href="plugins/switchery/switchery.min.css" rel="stylesheet">
     <!--Bootstrap Select [ OPTIONAL ]-->
     <link href="plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet">
     <!--Demo [ DEMONSTRATION ]-->
-    <link href="css/demo/jasmine.css" rel="stylesheet">
+    <link href="../file/css/demo/jasmine.css" rel="stylesheet">
     <!--SCRIPT-->
     <!--=================================================-->
     <!--Page Load Progress Bar [ OPTIONAL ]-->
@@ -63,7 +63,7 @@
                                             <!-- Dropdown list-->
                                             <li>
                                                 <a href="#" class="media">
-                                                    <div class="media-left"> <img src="img/av2.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                    <div class="media-left"> <img src="../assets/img/av2.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                     <div class="media-body">
                                                         <div class="text-nowrap">Andy sent you a message</div>
                                                         <small class="text-muted">15 minutes ago</small>
@@ -73,7 +73,7 @@
                                             <!-- Dropdown list-->
                                             <li>
                                                 <a href="#" class="media">
-                                                    <div class="media-left"> <img src="img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                    <div class="media-left"> <img src="../assets/img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                     <div class="media-body">
                                                         <div class="text-nowrap">Lucy sent you a message</div>
                                                         <small class="text-muted">30 minutes ago</small>
@@ -83,7 +83,7 @@
                                             <!-- Dropdown list-->
                                             <li>
                                                 <a href="#" class="media">
-                                                    <div class="media-left"> <img src="img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                    <div class="media-left"> <img src="../assets/img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                     <div class="media-body">
                                                         <div class="text-nowrap">Jackson sent you a message</div>
                                                         <small class="text-muted">40 minutes ago</small>
@@ -93,7 +93,7 @@
                                             <!-- Dropdown list-->
                                             <li>
                                                 <a href="#" class="media">
-                                                    <div class="media-left"> <img src="img/av6.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                    <div class="media-left"> <img src="../assets/img/av6.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                     <div class="media-body">
                                                         <div class="text-nowrap">Donna sent you a message</div>
                                                         <small class="text-muted">5 Horas ago</small>
@@ -103,7 +103,7 @@
                                             <!-- Dropdown list-->
                                             <li>
                                                 <a href="#" class="media">
-                                                    <div class="media-left"> <img src="img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                    <div class="media-left"> <img src="../assets/img/av4.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                     <div class="media-body">
                                                         <div class="text-nowrap">Lucy sent you a message</div>
                                                         <small class="text-muted">Yesterday</small>
@@ -113,7 +113,7 @@
                                             <!-- Dropdown list-->
                                             <li>
                                                 <a href="#" class="media">
-                                                    <div class="media-left"> <img src="img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
+                                                    <div class="media-left"> <img src="../assets/img/av3.png" alt="Profile Picture" class="img-circle img-sm"> </div>
                                                     <div class="media-body">
                                                         <div class="text-nowrap">Jackson sent you a message</div>
                                                         <small class="text-muted">Yesterday</small>
@@ -221,7 +221,7 @@
                         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
                         <li id="dropdown-user" class="dropdown">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle text-right">
-                                <span class="pull-right"> <img class="img-circle img-user media-object" src="img/av1.png" alt="Profile Picture"> </span>
+                                <span class="pull-right"> <img class="img-circle img-user media-object" src="../assets/img/av1.png" alt="Profile Picture"> </span>
                                 <div class="username hidden-xs">John Doe</div>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right with-arrow">
@@ -310,7 +310,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object"> 
-											     <img src="img/av1.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av1.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Albert</td>
@@ -322,7 +322,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av5.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av5.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Semantha</td>
@@ -334,7 +334,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av6.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av6.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Stevan </td>
@@ -346,7 +346,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av2.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av2.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Teresa </td>
@@ -358,7 +358,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av3.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av3.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Veronica </td>
@@ -370,7 +370,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av4.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av4.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>										
                                             <td>Bruce </td>
@@ -382,7 +382,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av7.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av7.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Carolina </td>
@@ -394,7 +394,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object"> 
-											     <img src="img/av1.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av1.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Albert</td>
@@ -406,7 +406,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av4.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av4.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>										
                                             <td>Bruce </td>
@@ -418,7 +418,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av5.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av5.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Semantha</td>
@@ -430,7 +430,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av2.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av2.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Teresa </td>
@@ -442,7 +442,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av3.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av3.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Veronica </td>
@@ -454,7 +454,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av6.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av6.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Stevan </td>
@@ -466,7 +466,7 @@
                                         <tr>
 										    <td>
                                               <div class="media-object center"> 
-											     <img src="img/av7.png" alt="" class="img-rounded img-sm"> 
+											     <img src="../assets/img/av7.png" alt="" class="img-rounded img-sm"> 
 										      </div>
                                             </td>
                                             <td>Carolina </td>
@@ -794,17 +794,17 @@
     <!--JAVASCRIPT-->
     <!--=================================================-->
     <!--jQuery [ REQUIRED ]-->
-    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="../file/js/jquery-2.1.1.min.js"></script>
     <!--BootstrapJS [ RECOMMENDED ]-->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../file/js/bootstrap.min.js"></script>
     <!--Fast Click [ OPTIONAL ]-->
     <script src="plugins/fast-click/fastclick.min.js"></script>
     <!--Jquery Nano Scroller js [ REQUIRED ]-->
-    <script src="plugins/nanoscrollerjs/jquery.nanoscroller.min.js"></script>
+    <script src="plugins/nanoscroller../file/js/jquery.nanoscroller.min.js"></script>
     <!--Metismenu js [ REQUIRED ]-->
     <script src="plugins/metismenu/metismenu.min.js"></script>
     <!--Jasmine Admin [ RECOMMENDED ]-->
-    <script src="js/scripts.js"></script>
+    <script src="../file/js/scripts.js"></script>
     <!--Switchery [ OPTIONAL ]-->
     <script src="plugins/switchery/switchery.min.js"></script>
     <!--Bootstrap Select [ OPTIONAL ]-->
@@ -814,7 +814,7 @@
     <!--Fullscreen jQuery [ OPTIONAL ]-->
     <script src="plugins/screenfull/screenfull.js"></script>
     <!--FooTable Example [ SAMPLE ]-->
-    <script src="js/demo/pages-directory.js"></script>
+    <script src="../file/js/demo/pages-directory.js"></script>
 
 </body>
 
