--- a/dashboard (panel de control)/pages-login.html
+++ b/dashboard (panel de control)/pages-login.html
@@ -5,24 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Login Page | Obama - Responsive admin template.</title>
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.ico">
     <!--STYLESHEET-->
     <!--=================================================-->
     <!--Roboto Slab Font [ OPTIONAL ] -->
     <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:500,400italic,100,700italic,300,700,500italic,400" rel="stylesheet">
     <!--Bootstrap Stylesheet [ REQUIRED ]-->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../file/css/bootstrap.min.css" rel="stylesheet">
     <!--Jasmine Stylesheet [ REQUIRED ]-->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../file/css/style.css" rel="stylesheet">
     <!--Font Awesome [ OPTIONAL ]-->
-    <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="plugins/font-awesome/../file/css/font-awesome.min.css" rel="stylesheet">
     <!--Switchery [ OPTIONAL ]-->
     <link href="plugins/switchery/switchery.min.css" rel="stylesheet">r
     <!--Bootstrap Select [ OPTIONAL ]-->
     <link href="plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet">
     <!--Demo [ DEMONSTRATION ]-->
-    <link href="css/demo/jasmine.css" rel="stylesheet">
+    <link href="../file/css/demo/jasmine.css" rel="stylesheet">
     <!--SCRIPT-->
     <!--=================================================-->
     <!--Page Load Progress Bar [ OPTIONAL ]-->
@@ -88,9 +88,9 @@
         <!--JAVASCRIPT-->
         <!--=================================================-->
         <!--jQuery [ REQUIRED ]-->
-        <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="../file/js/jquery-2.1.1.min.js"></script>
         <!--BootstrapJS [ RECOMMENDED ]-->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../file/js/bootstrap.min.js"></script>
         <!--Fast Click [ OPTIONAL ]-->
         <script src="plugins/fast-click/fastclick.min.js"></script>
         <!--Switchery [ OPTIONAL ]-->
