--- a/dashboard (panel de control)/plugins/nanoscrollerjs/bin/readme.html
+++ b/dashboard (panel de control)/plugins/nanoscrollerjs/bin/readme.html
@@ -3,9 +3,9 @@
 It uses minimal HTML markup being <code>.nano &gt; .nano-content</code>. The other scrollbar div elements <code>.pane &gt; .nano-slider</code> are added during run time to prevent clutter in templating. The latest version utilizes native scrolling and works with the iPad, iPhone, and some Android Tablets.</p>
 <h3 id="downloads">Downloads</h3>
 <ul>
-<li><a href="https://raw.github.com/jamesflorentino/nanoScrollerJS/master/bin/javascripts/jquery.nanoscroller.min.js">Production version</a></li>
-<li><a href="https://raw.github.com/jamesflorentino/nanoScrollerJS/master/bin/javascripts/jquery.nanoscroller.js">Development version</a></li>
-<li><a href="https://raw.github.com/jamesflorentino/nanoScrollerJS/master/bin/css/nanoscroller.css">Default stylesheet</a></li>
+<li><a href="https://raw.github.com/jamesflorentino/nanoScroller../file/js/master/bin/javascripts/jquery.nanoscroller.min.js">Production version</a></li>
+<li><a href="https://raw.github.com/jamesflorentino/nanoScroller../file/js/master/bin/javascripts/jquery.nanoscroller.js">Development version</a></li>
+<li><a href="https://raw.github.com/jamesflorentino/nanoScroller../file/js/master/bin/../file/css/nanoscroller.css">Default stylesheet</a></li>
 </ul>
 <p>To start using, you need three basic things:</p>
 <h3 id="1-markup">1. Markup</h3>
@@ -141,7 +141,7 @@ It uses minimal HTML markup being <code>.nano &gt; .nano-content</code>. The oth
 <pre><code class="lang-js">$(&quot;.nano&quot;).nanoScroller({ tabIndex: 0 });
 </code></pre>
 <h2 id="how-it-works">How it works</h2>
-<p><img src="https://github.com/jamesflorentino/nanoScrollerJS/raw/master/fig1.png" alt="Fig 1."></p>
+<p><img src="https://github.com/jamesflorentino/nanoScroller../file/js/raw/master/fig1.png" alt="Fig 1."></p>
 <p>The plugin works by creating a scrollbar gadget (with pre-defined css for styling) and then subscribing the <code>.nano-content</code>&#39;s scroll events to it. Mouse press and drag events are also subscribed to the <code>.nano-pane</code> and <code>.nano-pane &gt; .nano-slider</code> to emulate the native scrollbar&#39;s mechanism. The system scrollbars are hidden from the viewport (Fig 1). By doing this, we still retain the natural scrolling experience provided by the OS.</p>
 <p>We are still working on doing a horizontal scrolling feature. If you&#39;re interested in contributing to the project, you are free to fork it and create a pull request.</p>
 <h3 id="development">Development</h3>
@@ -181,7 +181,7 @@ It uses minimal HTML markup being <code>.nano &gt; .nano-content</code>. The oth
 <li>Android Opera 11.6 (<em>with a polyfill</em>)</li>
 <li>If you see it&#39;s broken on other tablets and mobile devices, please file a ticket in the git repo. Along with model name, and OS of the device.</li>
 </ul>
-<p>If you find a bug, please report here at the <a href="https://github.com/jamesflorentino/nanoScrollerJS/issues">issues section</a>.</p>
+<p>If you find a bug, please report here at the <a href="https://github.com/jamesflorentino/nanoScroller../file/js/issues">issues section</a>.</p>
 <h3 id="using-a-polyfill-for-better-mobile-browser-support">Using a polyfill for better mobile browser support</h3>
 <p>You can use <a href="https://github.com/filamentgroup/Overthrow/">overthrow.js</a> polyfill (~1.5kb minified and gzipped) to make nanoScroller work on many mobile devices. It emulates CSS overflow (overflow: auto;/overflow: scroll;) in devices that are lacking it.</p>
 <p>To use overthrow, link to the javascript file in your HTML document...</p>
