--- a/dashboard (panel de control)/plugins/nanoscrollerjs/tests/SpecRunner.html
+++ b/dashboard (panel de control)/plugins/nanoscrollerjs/tests/SpecRunner.html
@@ -4,7 +4,7 @@
 <head>
   <title>Jasmine Spec Runner</title>
 
-  <link rel="stylesheet" type="text/css" href="../bin/css/nanoscroller.css">
+  <link rel="stylesheet" type="text/css" href="../bin/../file/css/nanoscroller.css">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
   <style type="text/css">
     .nano { width: 200px; height: 200px; }
