--- a/dashboard (panel de control)/plugins/noty-master/demo/usingWithAnimate.css.html
+++ b/dashboard (panel de control)/plugins/noty-master/demo/usingWithAnimate.css.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" type="text/css" href="buttons.css"/>
     <link rel="stylesheet" type="text/css" href="animate.css"/>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="font-awesome/../file/css/font-awesome.min.css"/>
 
 </head>
 <body>
@@ -38,7 +38,7 @@
     <script src="jquery-1.7.2.min.js"></script>
 
     <!-- noty -->
-    <script type="text/javascript" src="../js/noty/packaged/jquery.noty.packaged.min.js"></script>
+    <script type="text/javascript" src="../../file/js/noty/packaged/jquery.noty.packaged.min.js"></script>
     <script type="text/javascript" src="notification_html.js"></script>
 
     <script type="text/javascript">
