--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/colors.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/colors.html
@@ -1,6 +1,6 @@
 <!doctype>
-<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-<link type="text/css" rel="stylesheet" href="css/lines.css">
+<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+<link type="text/css" rel="stylesheet" href="../file/css/lines.css">
 
 <script src="../vendor/d3.v3.js"></script>
 
