--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/extensions.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/extensions.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <head>
 	<link type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/detail.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/legend.css">
-	<link type="text/css" rel="stylesheet" href="css/extensions.css?v=2">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/detail.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/legend.css">
+	<link type="text/css" rel="stylesheet" href="../file/css/extensions.css?v=2">
 
 	<script src="../vendor/d3.v3.js"></script>
 
@@ -15,35 +15,35 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
 
-	<script src="../src/js/Rickshaw.js"></script>
-	<script src="../src/js/Rickshaw.Class.js"></script>
-	<script src="../src/js/Rickshaw.Compat.ClassList.js"></script>
-	<script src="../src/js/Rickshaw.Graph.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Renderer.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Renderer.Area.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Renderer.Line.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Renderer.Bar.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Renderer.ScatterPlot.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Renderer.Stack.js"></script>
-	<script src="../src/js/Rickshaw.Graph.RangeSlider.js"></script>
-	<script src="../src/js/Rickshaw.Graph.RangeSlider.Preview.js"></script>
-	<script src="../src/js/Rickshaw.Graph.HoverDetail.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Annotate.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Legend.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Axis.Time.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Behavior.Series.Toggle.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Behavior.Series.Order.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Behavior.Series.Highlight.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Smoother.js"></script>
-	<script src="../src/js/Rickshaw.Fixtures.Time.js"></script>
-	<script src="../src/js/Rickshaw.Fixtures.Time.Local.js"></script>
-	<script src="../src/js/Rickshaw.Fixtures.Number.js"></script>
-	<script src="../src/js/Rickshaw.Fixtures.RandomData.js"></script>
-	<script src="../src/js/Rickshaw.Fixtures.Color.js"></script>
-	<script src="../src/js/Rickshaw.Color.Palette.js"></script>
-	<script src="../src/js/Rickshaw.Graph.Axis.Y.js"></script>
+	<script src="../src/../file/js/Rickshaw.js"></script>
+	<script src="../src/../file/js/Rickshaw.Class.js"></script>
+	<script src="../src/../file/js/Rickshaw.Compat.ClassList.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Renderer.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Renderer.Area.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Renderer.Line.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Renderer.Bar.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Renderer.ScatterPlot.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Renderer.Stack.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.RangeSlider.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.RangeSlider.Preview.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.HoverDetail.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Annotate.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Legend.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Axis.Time.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Behavior.Series.Toggle.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Behavior.Series.Order.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Behavior.Series.Highlight.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Smoother.js"></script>
+	<script src="../src/../file/js/Rickshaw.Fixtures.Time.js"></script>
+	<script src="../src/../file/js/Rickshaw.Fixtures.Time.Local.js"></script>
+	<script src="../src/../file/js/Rickshaw.Fixtures.Number.js"></script>
+	<script src="../src/../file/js/Rickshaw.Fixtures.RandomData.js"></script>
+	<script src="../src/../file/js/Rickshaw.Fixtures.Color.js"></script>
+	<script src="../src/../file/js/Rickshaw.Color.Palette.js"></script>
+	<script src="../src/../file/js/Rickshaw.Graph.Axis.Y.js"></script>
 
-	<script src="js/extensions.js"></script>
+	<script src="../file/js/extensions.js"></script>
 </head>
 <body>
 
