--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/formatter.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/formatter.html
@@ -1,10 +1,10 @@
 <!doctype>
 <head>
 	<link type="text/css" rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/detail.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/legend.css">
-	<link type="text/css" rel="stylesheet" href="css/lines.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/detail.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/legend.css">
+	<link type="text/css" rel="stylesheet" href="../file/css/lines.css">
 
 	<script src="../vendor/d3.v3.js"></script>
 
