--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/inconsistent.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/inconsistent.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
-<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-<link type="text/css" rel="stylesheet" href="css/lines.css">
+<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+<link type="text/css" rel="stylesheet" href="../file/css/lines.css">
 <link type="text/css" rel="stylesheet" href="../rickshaw.css">
 
 <script src="../vendor/d3.v3.js"></script>
