--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/socket.io/socket.io.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/socket.io/socket.io.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
-	<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-	<link type="text/css" rel="stylesheet" href="../examples/css/lines.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+	<link type="text/css" rel="stylesheet" href="../examples/../file/css/lines.css">
 
 	<script src="../vendor/d3.v2.js"></script>
 
