--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/sparse.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/sparse.html
@@ -1,9 +1,9 @@
 <!doctype>
 <head>
-	<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/detail.css">
-	<link type="text/css" rel="stylesheet" href="../src/css/legend.css">
-	<link type="text/css" rel="stylesheet" href="css/lines.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/detail.css">
+	<link type="text/css" rel="stylesheet" href="../src/../file/css/legend.css">
+	<link type="text/css" rel="stylesheet" href="../file/css/lines.css">
 
 	<script src="../vendor/d3.v3.js"></script>
 
