--- a/dashboard (panel de control)/plugins/rickshaw-master/examples/status.html
+++ b/dashboard (panel de control)/plugins/rickshaw-master/examples/status.html
@@ -1,7 +1,7 @@
 <!doctype>
-<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
-<link type="text/css" rel="stylesheet" href="../src/css/legend.css">
-<link type="text/css" rel="stylesheet" href="css/extensions.css">
+<link type="text/css" rel="stylesheet" href="../src/../file/css/graph.css">
+<link type="text/css" rel="stylesheet" href="../src/../file/css/legend.css">
+<link type="text/css" rel="stylesheet" href="../file/css/extensions.css">
 
 <script src="../vendor/d3.v3.js"></script>
 <script src="../rickshaw.min.js"></script>
